--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "yellowbuds",
   "version": "0.1.0",
   "private": true,
+  "proxy":"http://ec2-13-127-71-22.ap-south-1.compute.amazonaws.com:8080",
   "license": "Dewhive",
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
