--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "yellowbuds",
   "version": "0.1.0",
   "private": true,
-  "proxy":"http://ec2-13-127-71-22.ap-south-1.compute.amazonaws.com:8080",
+  "proxy": "http://ec2-13-127-71-22.ap-south-1.compute.amazonaws.com:8080",
   "license": "Dewhive",
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
@@ -32,7 +32,10 @@
     "react-select-material-ui": "^6.6.3",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "twilio": "^3.6.7",
+    "twilio-chat": "^1.1.1",
+    "jquery": "^3.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
