--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^16.8.6",
     "react-i18next": "^11.3.4",
     "react-loadable": "^5.5.0",
+    "react-number-format": "^4.4.1",
     "react-otp-input": "^1.0.1",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
