--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_JAVA_REST = "http://ec2-15-207-175-213.ap-south-1.compute.amazonaws.com:8080"
+REACT_APP_JAVA_REST = "https://dev.dewhive.biz/backend/"
 
