--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_JAVA_REST = "https://demo.dewhive.biz/backend/"
+REACT_APP_JAVA_REST = "https://dev.dewhive.biz/backend/"
 
