--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "yellowbuds",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://demo.dewhive.biz/backend/",
+  "proxy": "https://dev.dewhive.biz/backend/",
   "license": "Dewhive",
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
