--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "yellowbuds",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://dev.dewhive.biz/backend/",
+  "proxy": "https://demo.dewhive.biz/backend/",
   "license": "Dewhive",
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
@@ -38,6 +38,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "sendbird": "^3.0.132",
+    "sonarqube-scanner": "^2.7.0",
     "twilio": "^3.6.7",
     "twilio-chat": "^1.1.1",
     "twilio-video": "^2.7.2"
@@ -65,6 +66,8 @@
     ]
   },
   "devDependencies": {
+    "jest": "^26.6.0",
+    "jest-sonar-reporter": "^2.0.0",
     "terser-brunch": "^4.0.0"
   }
 }
