--- a/.gitignore
+++ b/.gitignore
@@ -1,56 +1,1 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-
-# testing
-/coverage
-
-
-# next.js
-/.next/
-/out/
-
-
-# production
-/build
-
-
-# misc
-.DS_Store
-
-
-# local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Runtime data
-pids
-*.pid
-*.pid.lock
-
-
-# Output of 'npm pack'
-*.tgz
-
-# yarn v2
-.yarn/cache
-.yarn/unplugged
-.yarn/build-state.yml
-.yarn/install-state.gz
-.pnp.*
-
-# webstorm configuration files
-/.idea/
+node_modules
